--- a/homey/sass/_options-menu.scss
+++ b/homey/sass/_options-menu.scss
@@ -22,7 +22,6 @@
     @media (max-width: $mobile-break-small) {
         width: 80%;
     }
-    
     width: 50rem;
     margin: 0px auto;
     padding: 2rem;
@@ -40,6 +39,7 @@
     // option list
     & ul {
         list-style: none;
+        position: relative;
     }
     
     // option container
@@ -48,6 +48,7 @@
         justify-content: flex-end;
         font-size: 1.2rem;
         padding: 1rem;
+        width: 100%;
 
         // centered option container
         &__header {
@@ -66,6 +67,7 @@
             margin-left: 0;
             font-weight: 400;
             display: flex;
+            align-items: center;
 
             // option label info/warning icon
             & span {
@@ -75,7 +77,7 @@
                 margin-left: .5rem;
                 display: inline-flex;
                 color: $white;
-                height: 1.2rem;
+                //height: 1.2rem;
                 cursor: default;
             }
         }
